--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 .header {
     justify-content: center;
-    text-align:center;
+    text-align: center;
 }
 ol li {
     list-style-position: inside;
 }
 .exam {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
 }
-#table {
-    line-height:200%
+table {
+    border-collapse: collapse;
+    border: 3px solid black;
+    line-height:200%; 
+    color: black;
+}
+th, td {
+   border: 1px solid black;
 }
 footer {
     padding-top: 3px;
